2003/08/28 08:44 rwmcfa1

	* t/24.GtkTreeView.t: torsten's patch applied to fix "assertion
	`column_in_tree' failed" problem on various systems/versions. cached
	version info into an array and then use rather than getting it over and
	over.

2003/08/27 18:43 muppetman

	another round of treeview-related patched from torsten:
	* xs/GtkTreeView.xs xs/GtkTreeViewColumn.xs: a few more missing functions
	* t/22.GtkListStore.t t/23.GtkTreeStore.t t/24.GtkTreeView.t: new tests
	* t/22.GtkTreeSelection.t, t/25.GtkTreeSelection.t: renamed and updated

2003/08/25 13:40 pcg

        * t/04.GtkSocket-GtkPlug.t: Applied patch by Skye Cove to add
        -Mblib. Also change ctrl-x character to the more readable (and
        transferable) ^X.

2003/08/22 01:38 muppetman

	* Gtk2.pm, README, MANIFEST, META.yml, debian/changelog:
	updated for 0.95 release

2003/08/21 14:22 muppetman

	* xs/GtkTreeModel.xs: even yet still another patch from torsten,
	implementing gtk_tree_path_new_from_indices and fixing thr broken
	signature of gtk_tree_row_reference_new.  i took some liberties with
	the patch, making it croak with a helpful message on the -1 that will
	inevitably be passed in by people who read the C API reference.  i also
	removed the separate binding of new_from_string and aliased it into
	new, since new already calls new_from_string if you supply a string.

	* api.pod: mention how new_from_indices differs from the C func,
	and actually commit the accel group stuff i thought i commited
	yesterday.

2003/08/20 14:27 muppetman

	* t/22.GtkTreeSelection.t: new test, another patch from torsten

2003/08/20 12:39 rwmcfa1

	* api.pod: url of stock items strings added, thierry vignaud

	* t/04.GtkSocket-GtkPlug.t: make sure that forked perl runs under the
	same interperter that it does, calle dybedahl

2003/08/20 04:20 muppetman

	* TODO, examples/accel_groups.pl, xs/GtkAccelGroup.xs, api.pod:
	implemented a bunch of the GtkAccelGroup stuff, with an example.

2003/08/20 01:45 muppetma
